--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <span class="ityped-cursor"></span>
         </div>
         <ul id="typing-carousel-data">
-            <li>I'm Shivika, working in Generative AI, LLMs and NLP world</li>
+            <li>I'm Shivika, working in Generative AI, LLMs and NLP</li>
             <li>Bringing innovative Generative AI solutions to life</li>
         </ul>
         <div class="text-container ml-auto">
@@ -132,7 +132,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">LLM/NLP </div>
+                            <div class="circular-progress-value">LLM & NLP </div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -244,8 +244,8 @@
                     <h2>Sr Data Scientist Gen AI prompt</h2>
                     <p><strong>Aug'23 – Present</strong></p>
                     <ul>
-                        <li>Natural languiage to code</li>
-                        <li>RAG, Embedding, Vector DB, indexing, langchain</li>
+                        <li>POC to Prod: Natural languiage to code</li>
+                        <li>RAG, Embedding, Vector Search, Agents, langchain</li>
                         <li>Chain of thoughts, Innovative Prompt Engineering</li>
                     </ul>
                 </div>
@@ -323,7 +323,7 @@
                                 <div>
                                     <div class="d-flex">
                                         <img class="card-img-xs" src="images/projects/python.png" alt="Nocode" />
-                                        <h5 class="card-title mb-0">Google LLM Project</h5>
+                                        <h5 class="card-title mb-0">Google LLM Classifier</h5>
                                     </div>
                                     <div class="sub-title">
                                         <span>NLP Engineer</span>
@@ -348,7 +348,7 @@
                                 <div>
                                     <div class="d-flex">
                                         <img class="card-img-xs" src="images/projects/logo.png">
-                                        <h5 class="card-title mb-0"> Microsoft funded  Search Engine</h5>
+                                        <h5 class="card-title mb-0"> Microsoft GenAI Search</h5>
                                     </div>
                                     <div class="sub-title">
                                         <span> May 2020 - April 2021 </span>
@@ -466,7 +466,7 @@
             <div class="col-md-4 col-sm-12">
                 <h5>Contact Me</h5>
                 <ul>
-                    <li><span>Email: </span> <span>shivikabisen@gmai.com</span></li>
+                    <li><span>Email: </span> <span>shivikakbisen@gmail.com</span></li>
                     <li><span>Phone: </span> <span>&#43;1 (248) 229-6074</span></li>
                 </ul>
             </div>
