--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#experiences">Experiences</a>
+                    <a class="nav-link" href="#expertise">Expertise</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#expertise">Expertise</a>
+                    <a class="nav-link" href="#experiences">Experiences</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">Projects</a>
@@ -75,7 +75,7 @@
             <span class="ityped-cursor"></span>
         </div>
         <ul id="typing-carousel-data">
-            <li>I'm Shivika, working in Generative AI, LLMs and NLP</li>
+            <li>I'm Shivika, working in Generative AI, LLMs and NLP and Linguistics </li>
             <li>Bringing innovative Generative AI solutions to life</li>
         </ul>
         <div class="text-container ml-auto">
@@ -95,93 +95,45 @@
 <div class="container-fluid section-holder bg-black" id="about">
     <div class="container anchor p-lg-5 about-section">
         <div class="row pt-sm-2 pt-md-4 align-self-center">
-            <div class="col-sm-6">
+            <div class="col-sm-12">
                 <h3 class="p-1">Shivika K Bisen</h3>
-                <h5 class="p-1">Generative AI - Data Science<br><a href="https://umich.edu/">Viasat Inc</a></h5>
+                <h5 class="p-1">Generative AI - Data Science<br><a href="https://www.linkedin.com/in/shivika-k-bisen/">Viasat Inc</a></h5>
                 <p class="p-1 text-justify">
                     <p> Expertise in LLM, NLP, Agentic AI products from inception to production at scale</p>
                     <p><strong>Organizations</strong> Viasat, Paxafe - J&J, UMich - Google and Microsoft</p>
-                    <p><strong>Expertise</strong></p>
-                    <ul>
-                        <li>LLMs / Agentic AI: RAG, Prompt Engineering, Chain of thougts, Adversarial prompting, Embedding, Vector store</li>
-                        <li>NLP: Linguistic Feature Engineering, Social Imapact, Emotionally Intelligent models, Topic Modeling</li>
-                        <li>Software Engineering: Deployment, Architecture, Cloud, CI-CD </li>
-                    </ul>
                 </p>    
                 <a href="files/Resume_Shivika.pdf" target="#"><button class="btn btn-dark">Resume</button></a>
             </div>
-            <div class="col-sm-6 pt-5 pl-md-4 pl-sm-3 pt-sm-0">
-                <h3 class="p-1">Core Skills</h3>
-                <div class="row">
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress blue">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">Python,SQL,JS</div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress yellow">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">LLM & NLP </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress blue">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">Agentic AI</div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress orange">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar
+        </div>
+    </div>
+</div>
 
- circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">AI Prompt</div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress orange">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">Cloud</div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress green">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">AI at scale</div>
-                        </div>
-                    </div>
-                </div>
+<div class="container-fluid section-holder bg-white" id="expertise">
+    <div class="container anchor p-lg-5 expertise-section">
+        <h2 class="text-center">Expertise and Core Skills</h2>
+        <div class="expertise-arch">
+            <div class="expertise-professional">
+                <img src="images/avatar1.png" alt="Professional">
+            </div>
+            <div class="expertise-bubble" data-expertise="Gen AI (Agentic)">
+                <img src="images/gen_ai.png" alt="Gen AI (Agentic)">
+                <span>Gen AI (Agentic)</span>
+            </div>
+            <div class="expertise-bubble" data-expertise="Prompt Engineer">
+                <img src="images/prompt.png" alt="Prompt Engineer">
+                <span>Prompt Engineer</span>
+            </div>
+            <div class="expertise-bubble" data-expertise="Linguistics">
+                <img src="images/linguistics.png" alt="Linguistics">
+                <span>Linguistics</span>
+            </div>
+            <div class="expertise-bubble" data-expertise="Natural language Processing">
+                <img src="images/nlp.jpeg" alt="Natural language Processing">
+                <span>Natural language Processing</span>
+            </div>
+            <div class="expertise-bubble" data-expertise="Productionize @ Scale">
+                <img src="images/e2e.png" alt="Productionize AI @ Scale">
+                <span>Productionize AI @ Scale</span>
             </div>
         </div>
     </div>
@@ -199,7 +151,7 @@
                     <ul>
                         <li>Finetuned RoBERTa Intent Classifier</li>
                         <li>Linguistic features - LIWC, Stanford CoreNLP</li>
-                        <li>NLP, NLU, topic modeling, embeddings </li>
+                        <li>NLP, NLU, topic modeling, embeddings, Emotional Intelligence AI, Linguistics </li>
                     </ul>
                 </div>
             </div>
@@ -209,7 +161,7 @@
                     <h2>Data Scientist LLM</h2>
                     <p><strong>May'20 – Apr'21</strong></p>
                     <ul>
-                        <li>Search Engine for UN reports (> Google)</li>
+                        <li>Natural Language Processing (NLP) and Large Language Models (LLM) for United Nations reports (Google & Microsoft collaboration)</li>
                         <li>BERT Summary</li>
                         <li>BM-25, vector search</li>
                     </ul>
@@ -232,7 +184,6 @@
                     <h2>Data Scientist AI/ML</h2>
                     <p><strong>May'21 – Aug'23</strong></p>
                     <ul>
-                        <li></li>
                         <li>NLU report</li>
                         <li>Data models and data pipelines for automating cloud workflow from AWS S3 to RedShift</li>
                     </ul>
@@ -244,42 +195,11 @@
                     <h2>Sr Data Scientist Gen AI prompt</h2>
                     <p><strong>Aug'23 – Present</strong></p>
                     <ul>
-                        <li>POC to Prod: Natural languiage to code</li>
+                        <li>POC to Prod: Natural language to code with Generative AI and Agentic AI</li>
                         <li>RAG, Embedding, Vector Search, Agents, langchain</li>
                         <li>Chain of thoughts, Innovative Prompt Engineering</li>
                     </ul>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container-fluid section-holder bg-white" id="expertise">
-    <div class="container anchor p-lg-5 expertise-section">
-        <h1 class="text-center">Technical Expertise</h1>
-        <div class="expertise-arch">
-            <div class="expertise-professional">
-                <img src="images/professional_icon.png" alt="Professional">
-            </div>
-            <div class="expertise-bubble" data-expertise="Productionalize AI/ML">
-                <img src="images/e2e.png" alt="Productionalize AI/ML">
-                <span> AI to Scaled Production</span>
-            </div>
-            <div class="expertise-bubble" data-expertise="Natural language Processing">
-                <img src="images/nlp.jpeg" alt="Natural language Processing">
-                <span>Natural language Processing</span>
-            </div>
-            <div class="expertise-bubble" data-expertise="Generative AI">
-                <img src="images/gen_ai.png" alt="Generative AI">
-                <span>Generative AI</span>
-            </div>
-            <div class="expertise-bubble" data-expertise="Cloud AWS, GCP">
-                <img src="images/cloud.png" alt="Cloud AWS, GCP">
-                <span>Cloud AWS, GCP</span>
-            </div>
-            <div class="expertise-bubble" data-expertise="Agentic AI, LLM">
-                <img src="images/prompt.png" alt="Agentic AI, LLM">
-                <span>Prompt Engineer</span>
             </div>
         </div>
     </div>
@@ -335,7 +255,7 @@
                                 <p>Google project for detecting user behavior. RoBERTa, embedding, LIWC, Stanford Core-NLP</p>
                                 <img class="card-img" src="images/projects/google.png"/>
                                 <span class="float-right">
-                                    <a class="github-button-inactive" href="https://blog.google/outreach-initiatives/google-org/googleorg-and-family-independence-initiative-collaborate-empower-low-income-families/" data-icon="octicon-standard" data-show-count="true" aria-label="Star Nocode">Star</a>
+                                    <a class="github-button-inactive" href="https://blog.google/outreach-initiatives/google-org/googleorg-and-family-independence-initiative-collaborate-empuser-low-income-families/" data-icon="octicon-standard" data-show-count="true" aria-label="Star Nocode">Star</a>
                                 </span>
                             </div>
                         </div>
@@ -358,7 +278,7 @@
                             <div class="card-body text-justify pt-1 pb-1">
                                 <p>Search engine for United Nations. BERT, summerization and BM25 & Vector Search.</p>
                                 <span class="float-right">
-                                    <img class="card-img" src="images/projects/chetah.png">
+                                    <img class="card-img" src="images/projects/chetah.png"/>
                                     <a class="github-button-inactive" href="https://www.data4good.center/projects/chetah" data-icon="octicon-standard" data-show-count="true" aria-label="Star Toha">Star</a>
                                 </span>
                             </div>
@@ -458,23 +378,6 @@
             </ul>
         </div>
     </div>
-</div>
-
-<footer class="container-fluid text-center align-content-center footer pb-2">
-    <div class="container">
-        <div class="row text-left">
-            <div class="col-md-4 col-sm-12">
-                <h5>Contact Me</h5>
-                <ul>
-                    <li><span>Email: </span> <span>shivikakbisen@gmail.com</span></li>
-                    <li><span>Phone: </span> <span>&#43;1 (248) 229-6074</span></li>
-                </ul>
-            </div>
-        </div>
-        <hr />
-        <div class="row text-left">
-        </div>
-    </div>
 </footer>
 
 <script src="assets/js/jquery-3.4.1.min.js"></script>
@@ -500,106 +403,112 @@
 <style>
 .expertise-arch {
     width: 100%;
-    height: 700px; /* Increased height to accommodate larger bubbles */
+    height: 600px; /* Adjusted height to accommodate the semi-circle */
     position: relative;
-    margin-top: 0;  /* Adjusted to remove gap */
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
 }
 
 .expertise-bubble {
-    width: 250px; /* Increased width */
-    height: 150px; /* Increased height */
+    width: 190px; /* Adjusted bubble size */
+    height: 100px;
     background-color: #f3f3f3;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: transform 0.3s, box-shadow 0.3s, width 0.3s, height 0.3s;
-    border-radius: 10px;
-    padding: 10px;
+    transition: transform 0.3s, box-shadow 0.3s;
+    border-radius: 5px;
+    padding: 10px; /* Adjusted padding */
     text-align: center;
     position: absolute;
-    overflow: hidden; /* Ensure the image is cropped to fit the bubble */
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.15);
 }
 
 .expertise-bubble img {
-    width: 100%; /* Ensure image covers the width of the bubble */
-    height: 100%; /* Ensure image covers the height of the bubble */
-    object-fit: cover; /* Crop the image to fit */
-    margin-bottom: 10px;
-    transition: width 0.3s, height 0.3s; /* Ensure image transition smoothly */
+    max-width: 70%; /* Adjusted image size */
+    max-height: 70%;
+    object-fit: contain;
+    margin-bottom: 10px; /* Adjusted margin */
+    transition: max-width 0.3s, max-height 0.3s;
 }
 
 .expertise-bubble span {
-    font-size: 14px;
-    transition: font-size 0.3s; /* Ensure text transition smoothly */
+    font-size: 16px; /* Adjusted font size */
+    font-weight: 500;
+    transition: font-size 0.3s;
 }
 
 .expertise-bubble:hover {
-    transform: scale(1.2);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 300px; /* Increase width */
-    height: 180px; /* Increase height */
+    transform: scale(2);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .expertise-bubble:hover img {
-    width: 100%; /* Maintain full width on hover */
-    height: 100%; /* Maintain full height on hover */
+    max-width: 65%;
+    max-height: 55%;
 }
 
 .expertise-bubble:hover span {
-    font-size: 16px; /* Increase text size */
+    font-size: 17px;
 }
 
 .expertise-professional {
-    width: 250px; /* Increased size */
-    height: 250px; /* Increased size */
+    width: 100px; /* Adjusted central image size */
+    height: 100px;
     position: absolute;
-    bottom: 20%; /* Adjusted to position above the bubbles */
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
+    z-index: 10;
 }
 
 .expertise-professional img {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensure the image covers the container */
+    object-fit: cover;
+    border-radius: 50%;
 }
 
-/* Positioning the bubbles in a more spread out arc */
-.expertise-bubble:nth-child(2) {
-    bottom: 50%;
-    left: 5%;
-    transform: translateX(-50%);
-}
-
-.expertise-bubble:nth-child(3) {
-    bottom: 60%;
-    left: 25%;
-    transform: translateX(-50%);
-}
-
-.expertise-bubble:nth-child(4) {
-    bottom: 70%;
+/* Positioning for bubbles in a semi-circular arrangement above the center */
+.expertise-bubble:nth-child(2) { /* Gen AI (Agentic) - Top-most */
+    top: 20%;
     left: 50%;
     transform: translateX(-50%);
 }
 
-.expertise-bubble:nth-child(5) {
-    bottom: 60%;
-    left: 75%;
+.expertise-bubble:nth-child(3) { /* Prompt Engineer - Top-right */
+    top: 30%;
+    left: 70%;
     transform: translateX(-50%);
 }
 
-.expertise-bubble:nth-child(6) {
-    bottom: 50%;
-    left: 95%;
+.expertise-bubble:nth-child(4) { /* Emotional Intelligence in AI - Bottom-right (of semi-circle) */
+    top: 50%;
+    left: 85%;
+    transform: translateX(-50%);
+}
+
+.expertise-bubble:nth-child(5) { /* Linguistics - Bottom-left (of semi-circle) */
+    top: 50%;
+    left: 15%;
+    transform: translateX(-50%);
+}
+
+.expertise-bubble:nth-child(6) { /* Natural language Processing - Top-left */
+    top: 30%;
+    left: 30%;
+    transform: translateX(-60%);
+}
+
+.expertise-bubble:nth-child(7) { /* Productionize @ Scale - Center-top */
+    top: 10%;
+    left: 50%;
     transform: translateX(-50%);
 }
 </style>
-        
+
 </body>
 </html>
