--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
             <div class="expertise-bubble" data-expertise="Linguistics">
                 <img src="images/linguistics.png" alt="Linguistics">
-                <span>Linguistics</span>
+                <span>Linguistics And EQ</span>
             </div>
             <div class="expertise-bubble" data-expertise="Natural language Processing">
                 <img src="images/nlp.jpeg" alt="Natural language Processing">
